[project]
name = "wiremock"
version = "2.7.0"
description = "Wiremock Admin API Client"
authors = [
    {name = "Cody Lee", email = "cody.lee@datadoghq.com"},
    {name = "Mike Waites", email = "mikey.waites@gmail.com"}
]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Environment :: Other Environment",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Unit",
  "Topic :: Software Development :: Testing :: Mocking",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9, <3.14"
dependencies = [
  "requests>=2.32.4"
]

[project.optional-dependencies]
testing = [
  "docker>=7.1.0",
  "testcontainers>=3.7.1,<4.0.0",
]

[tool.poetry]
packages = [{include = "wiremock"}]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.3"
pytest-coverage = "^0.0"
python-coveralls = "^2.9.3"
responses = "^0.23.1"
tox = "^4.4.12"
watchdog = "^3.0.0"
wheel = "^0.40.0"
pytest = "^7.3.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.0"
markdown_include = "^0.8.1"

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit tests",
  "mappings",
  "nearmisses",
  "resource",
  "serialization",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
