[metadata]
name = wiremock
url = https://github.com/wiremock/python-wiremock/
license = Apache Software License 2.0
author = Cody Lee
author_email = cody.lee@datadoghq.com
description = Wiremock Admin API Client
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Environment :: Other Environment
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8
setup_requires = setuptools_scm
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    # direct dependencies
    click >= 7
    pep517
    pip >= 21.2
    # indirect dependencies
    setuptools  # typically needed when python-wiremock invokes setup.py
    wheel  # pip plugin needed by python-wiremock

[options.packages.find]
exclude = tests

[options.extras_require]
testing =
    pytest
    pytest-rerunfailures
    pytest-xdist
coverage = pytest-cov

[options.entry_points]
console_scripts =
    pip-compile = piptools.scripts.compile:cli
    pip-sync = piptools.scripts.sync:cli

[tool:pytest]
addopts =
    # `pytest-xdist`:
    --numprocesses=auto
norecursedirs = .* build dist venv test_data wiremock/_compat/*
testpaths = tests piptools
filterwarnings =
    always
markers =
    network: mark tests that require internet access

[flake8]
max-line-length = 100
extend-ignore = E203  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple
# PT023:
pytest-mark-no-parentheses = true

[isort]
profile = black

[mypy]
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
